Compiler/parser.output
Terminals unused in grammar

    OPEN_CURLY_BRACKET
    CLOSE_CURLY_BRACKET
    COMMERCIAL_AT
    CLASS_VAR_NAME


Grammar

    0 $accept: program $end

    1 program: program_items_list

    2 program_item: stmt
    3             | def_method_stmt
    4             | class_declaration

    5 program_items_list_not_empty: program_item
    6                             | program_items_list_not_empty program_item

    7 program_items_list: %empty
    8                   | program_items_list_not_empty

    9 expr: INTEGER_NUMBER
   10     | FLOAT_NUMBER
   11     | STR
   12     | TRUE
   13     | FALSE
   14     | LOGICAL_NOT_OP new_lines_op expr
   15     | ARITHMETIC_PLUS_OP new_lines_op expr
   16     | expr ARITHMETIC_POW_OP new_lines_op expr
   17     | ARITHMETIC_MINUS_OP new_lines_op expr
   18     | expr ARITHMETIC_MUL_OP new_lines_op expr
   19     | expr ARITHMETIC_DIV_OP new_lines_op expr
   20     | expr ARITHMETIC_MOD_OP new_lines_op expr
   21     | expr ARITHMETIC_PLUS_OP new_lines_op expr
   22     | expr ARITHMETIC_MINUS_OP new_lines_op expr
   23     | expr GREATER_OP new_lines_op expr
   24     | expr LESS_OP new_lines_op expr
   25     | expr GREATER_OR_EQL_OP new_lines_op expr
   26     | expr LESS_OR_EQL_OP new_lines_op expr
   27     | expr COMB_COMPRASION_OP new_lines_op expr
   28     | expr EQL_OP new_lines_op expr
   29     | expr CASE_EQL_OP new_lines_op expr
   30     | expr NOT_EQL_OP new_lines_op expr
   31     | expr LOGICAL_AND_OP new_lines_op expr
   32     | expr LOGICAL_OR_OP new_lines_op expr
   33     | expr INCLUSIVE_RANGE_OP new_lines_op expr
   34     | expr EXCLUSIVE_RANGE_OP new_lines_op expr
   35     | expr ASSIGN_OP new_lines_op expr
   36     | expr UNTIL new_lines_op expr
   37     | expr WHILE new_lines_op expr
   38     | DEFINED new_lines_op expr
   39     | NOT new_lines_op expr
   40     | expr AND new_lines_op expr
   41     | expr OR new_lines_op expr
   42     | OPEN_ROUND_BRACKET new_lines_op expr_list CLOSE_ROUND_BRACKET
   43     | expr OPEN_SQUARE_BRACKET new_lines_op expr CLOSE_SQUARE_BRACKET
   44     | OPEN_SQUARE_BRACKET new_lines_op expr_list CLOSE_SQUARE_BRACKET
   45     | VAR_OR_METHOD_NAME OPEN_ROUND_BRACKET new_lines_op expr_list CLOSE_ROUND_BRACKET
   46     | VAR_OR_METHOD_NAME
   47     | INSTANCE_VAR_NAME
   48     | CLASS_NAME
   49     | expr DOT_SYMBOL new_lines_op VAR_OR_METHOD_NAME
   50     | expr DOT_SYMBOL new_lines_op VAR_OR_METHOD_NAME OPEN_ROUND_BRACKET expr_list CLOSE_ROUND_BRACKET
   51     | SELF DOT_SYMBOL new_lines_op VAR_OR_METHOD_NAME
   52     | SELF DOT_SYMBOL new_lines_op VAR_OR_METHOD_NAME OPEN_ROUND_BRACKET expr_list CLOSE_ROUND_BRACKET

   53 stmt_ends: SEMICOLON_SYMBOL
   54          | NEW_LINE_SYMBOL
   55          | SEMICOLON_SYMBOL stmt_ends
   56          | NEW_LINE_SYMBOL stmt_ends

   57 new_lines_op: %empty
   58             | new_lines

   59 new_lines: NEW_LINE_SYMBOL
   60          | NEW_LINE_SYMBOL new_lines

   61 stmt_ends_op: %empty
   62             | stmt_ends

   63 stmt: expr stmt_ends
   64     | stmt_block stmt_ends_op
   65     | if_stmt stmt_ends_op
   66     | for_stmt stmt_ends_op
   67     | while_stmt stmt_ends_op
   68     | until_stmt stmt_ends_op
   69     | RETURN expr stmt_ends
   70     | RETURN stmt_ends

   71 stmt_list_not_empty: stmt
   72                    | stmt_list_not_empty stmt

   73 stmt_list_with_super: %empty
   74                     | stmt_list_not_empty
   75                     | super_method_stmt

   76 stmt_list: %empty
   77          | stmt_list_not_empty

   78 stmt_block: BEGIN_KEYWORD stmt_ends_op stmt_list END

   79 if_start_stmt: IF new_lines_op expr stmt_ends stmt_list
   80              | IF new_lines_op expr SEMICOLON_SYMBOL new_lines_op THEN stmt_ends_op stmt_list
   81              | IF new_lines_op expr new_lines_op THEN stmt_ends_op stmt_list

   82 elsif_stmt: ELSIF new_lines_op expr stmt_ends stmt_list
   83           | ELSIF new_lines_op expr new_lines_op THEN stmt_ends_op stmt_list
   84           | ELSIF new_lines_op expr SEMICOLON_SYMBOL new_lines_op THEN stmt_ends_op stmt_list

   85 elsif_stmt_list: elsif_stmt
   86                | elsif_stmt_list elsif_stmt

   87 if_stmt: if_start_stmt END
   88        | if_start_stmt ELSE stmt_ends_op stmt_list END
   89        | if_start_stmt elsif_stmt_list END
   90        | if_start_stmt elsif_stmt_list ELSE stmt_ends_op stmt_list END

   91 for_stmt: FOR new_lines_op VAR_OR_METHOD_NAME IN new_lines_op expr stmt_ends stmt_list END
   92         | FOR new_lines_op INSTANCE_VAR_NAME IN new_lines_op expr stmt_ends stmt_list END
   93         | FOR new_lines_op VAR_OR_METHOD_NAME IN new_lines_op expr DO stmt_ends_op stmt_list END
   94         | FOR new_lines_op INSTANCE_VAR_NAME IN new_lines_op expr DO stmt_ends_op stmt_list END

   95 while_stmt: WHILE new_lines_op expr stmt_ends stmt_list END
   96           | WHILE new_lines_op expr DO stmt_ends_op stmt_list END

   97 until_stmt: UNTIL new_lines_op expr stmt_ends stmt_list END
   98           | UNTIL new_lines_op expr DO stmt_ends_op stmt_list END

   99 method_param: VAR_OR_METHOD_NAME
  100             | VAR_OR_METHOD_NAME ASSIGN_OP expr

  101 method_params_list: %empty
  102                   | method_params_list_not_empty

  103 method_params_list_not_empty: method_param
  104                             | method_params_list_not_empty COMMA_SYMBOL new_lines_op method_param

  105 def_method_stmt: DEF VAR_OR_METHOD_NAME stmt_ends stmt_list_with_super END stmt_ends_op
  106                | DEF VAR_OR_METHOD_NAME OPEN_ROUND_BRACKET new_lines_op method_params_list CLOSE_ROUND_BRACKET stmt_ends_op stmt_list_with_super END stmt_ends_op

  107 super_method_stmt: SUPER method_params_list new_lines_op
  108                  | SUPER OPEN_ROUND_BRACKET new_lines_op method_params_list CLOSE_ROUND_BRACKET new_lines_op

  109 expr_list: %empty
  110          | expr_list_not_empty

  111 expr_list_not_empty: expr new_lines_op
  112                    | expr_list_not_empty COMMA_SYMBOL new_lines_op expr new_lines_op

  113 class_declaration: CLASS CLASS_NAME stmt_ends def_method_list_op END stmt_ends
  114                  | CLASS CLASS_NAME LESS_OP new_lines_op CLASS_NAME stmt_ends def_method_list_op END stmt_ends

  115 def_method_list_op: %empty
  116                   | def_method_list

  117 def_method_list: def_method_stmt
  118                | def_method_list def_method_stmt


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    AND (258) 40
    BEGIN_KEYWORD (259) 78
    CLASS (260) 113 114
    DEF (261) 105 106
    DEFINED (262) 38
    DO (263) 93 94 96 98
    IF (264) 79 80 81
    ELSE (265) 88 90
    ELSIF (266) 82 83 84
    END (267) 78 87 88 89 90 91 92 93 94 95 96 97 98 105 106 113 114
    FALSE (268) 13
    FOR (269) 91 92 93 94
    IN (270) 91 92 93 94
    NOT (271) 39
    OR (272) 41
    RETURN (273) 69 70
    SELF (274) 51 52
    SUPER (275) 107 108
    THEN (276) 80 81 83 84
    TRUE (277) 12
    UNTIL (278) 36 97 98
    WHILE (279) 37 95 96
    ARITHMETIC_PLUS_OP (280) 15 21
    ARITHMETIC_MINUS_OP (281) 17 22
    ARITHMETIC_MUL_OP (282) 18
    ARITHMETIC_DIV_OP (283) 19
    ARITHMETIC_MOD_OP (284) 20
    ARITHMETIC_POW_OP (285) 16
    EQL_OP (286) 28
    NOT_EQL_OP (287) 30
    GREATER_OP (288) 23
    LESS_OP (289) 24 114
    GREATER_OR_EQL_OP (290) 25
    LESS_OR_EQL_OP (291) 26
    COMB_COMPRASION_OP (292) 27
    CASE_EQL_OP (293) 29
    ASSIGN_OP (294) 35 100
    LOGICAL_AND_OP (295) 31
    LOGICAL_OR_OP (296) 32
    LOGICAL_NOT_OP (297) 14
    INCLUSIVE_RANGE_OP (298) 33
    EXCLUSIVE_RANGE_OP (299) 34
    OPEN_ROUND_BRACKET (300) 42 45 50 52 106 108
    CLOSE_ROUND_BRACKET (301) 42 45 50 52 106 108
    OPEN_CURLY_BRACKET (302)
    CLOSE_CURLY_BRACKET (303)
    OPEN_SQUARE_BRACKET (304) 43 44
    CLOSE_SQUARE_BRACKET (305) 43 44
    COMMERCIAL_AT (306)
    DOT_SYMBOL (307) 49 50 51 52
    COMMA_SYMBOL (308) 104 112
    SEMICOLON_SYMBOL (309) 53 55 80 84
    NEW_LINE_SYMBOL (310) 54 56 59 60
    STR <string_un> (311) 11
    INTEGER_NUMBER <int_un> (312) 9
    FLOAT_NUMBER <float_un> (313) 10
    VAR_OR_METHOD_NAME <var_name_un> (314) 45 46 49 50 51 52 91 93 99 100 105 106
    INSTANCE_VAR_NAME <instance_var_name_un> (315) 47 92 94
    CLASS_NAME <class_name_un> (316) 48 113 114
    CLASS_VAR_NAME <class_var_name_un> (317)
    UNARY_MINUS (318)
    UNARY_PLUS (319)


Nonterminals, with rules where they appear

    $accept (65)
        on left: 0
    program <program_un> (66)
        on left: 1
        on right: 0
    program_item <program_item_un> (67)
        on left: 2 3 4
        on right: 5 6
    program_items_list_not_empty <program_item_list_un> (68)
        on left: 5 6
        on right: 6 8
    program_items_list <program_item_list_un> (69)
        on left: 7 8
        on right: 1
    expr <expr_un> (70)
        on left: 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52
        on right: 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 43 49 50 63 69 79 80 81 82 83 84 91 92 93 94 95 96 97 98 100 111 112
    stmt_ends (71)
        on left: 53 54 55 56
        on right: 55 56 62 63 69 70 79 82 91 92 95 97 105 113 114
    new_lines_op (72)
        on left: 57 58
        on right: 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 49 50 51 52 79 80 81 82 83 84 91 92 93 94 95 96 97 98 104 106 107 108 111 112 114
    new_lines (73)
        on left: 59 60
        on right: 58 60
    stmt_ends_op (74)
        on left: 61 62
        on right: 64 65 66 67 68 78 80 81 83 84 88 90 93 94 96 98 105 106
    stmt <stmt_un> (75)
        on left: 63 64 65 66 67 68 69 70
        on right: 2 71 72
    stmt_list_not_empty <stmt_list_un> (76)
        on left: 71 72
        on right: 72 74 77
    stmt_list_with_super <stmt_list_un> (77)
        on left: 73 74 75
        on right: 105 106
    stmt_list <stmt_list_un> (78)
        on left: 76 77
        on right: 78 79 80 81 82 83 84 88 90 91 92 93 94 95 96 97 98
    stmt_block <block_un> (79)
        on left: 78
        on right: 64
    if_start_stmt <if_part_un> (80)
        on left: 79 80 81
        on right: 87 88 89 90
    elsif_stmt <if_part_un> (81)
        on left: 82 83 84
        on right: 85 86
    elsif_stmt_list <elsif_list_un> (82)
        on left: 85 86
        on right: 86 89 90
    if_stmt <stmt_un> (83)
        on left: 87 88 89 90
        on right: 65
    for_stmt <stmt_un> (84)
        on left: 91 92 93 94
        on right: 66
    while_stmt <stmt_un> (85)
        on left: 95 96
        on right: 67
    until_stmt <stmt_un> (86)
        on left: 97 98
        on right: 68
    method_param <method_param_un> (87)
        on left: 99 100
        on right: 103 104
    method_params_list <method_param_list_un> (88)
        on left: 101 102
        on right: 106 107 108
    method_params_list_not_empty <method_param_list_un> (89)
        on left: 103 104
        on right: 102 104
    def_method_stmt <def_method_un> (90)
        on left: 105 106
        on right: 3 117 118
    super_method_stmt <def_method_un> (91)
        on left: 107 108
        on right: 75
    expr_list <expr_list_un> (92)
        on left: 109 110
        on right: 42 44 45 50 52
    expr_list_not_empty <expr_list_un> (93)
        on left: 111 112
        on right: 110 112
    class_declaration <program_item_un> (94)
        on left: 113 114
        on right: 4
    def_method_list_op <def_method_list_un> (95)
        on left: 115 116
        on right: 113 114
    def_method_list <def_method_list_un> (96)
        on left: 117 118
        on right: 116 118


State 0

    0 $accept: . program $end

    BEGIN_KEYWORD        shift, and go to state 1
    CLASS                shift, and go to state 2
    DEF                  shift, and go to state 3
    DEFINED              shift, and go to state 4
    IF                   shift, and go to state 5
    FALSE                shift, and go to state 6
    FOR                  shift, and go to state 7
    NOT                  shift, and go to state 8
    RETURN               shift, and go to state 9
    SELF                 shift, and go to state 10
    TRUE                 shift, and go to state 11
    UNTIL                shift, and go to state 12
    WHILE                shift, and go to state 13
    ARITHMETIC_PLUS_OP   shift, and go to state 14
    ARITHMETIC_MINUS_OP  shift, and go to state 15
    LOGICAL_NOT_OP       shift, and go to state 16
    OPEN_ROUND_BRACKET   shift, and go to state 17
    OPEN_SQUARE_BRACKET  shift, and go to state 18
    STR                  shift, and go to state 19
    INTEGER_NUMBER       shift, and go to state 20
    FLOAT_NUMBER         shift, and go to state 21
    VAR_OR_METHOD_NAME   shift, and go to state 22
    INSTANCE_VAR_NAME    shift, and go to state 23
    CLASS_NAME           shift, and go to state 24

    $default  reduce using rule 7 (program_items_list)

    program                       go to state 25
    program_item                  go to state 26
    program_items_list_not_empty  go to state 27
    program_items_list            go to state 28
    expr                          go to state 29
    stmt                          go to state 30
    stmt_block                    go to state 31
    if_start_stmt                 go to state 32
    if_stmt                       go to state 33
    for_stmt                      go to state 34
    while_stmt                    go to state 35
    until_stmt                    go to state 36
    def_method_stmt               go to state 37
    class_declaration             go to state 38


State 1

   78 stmt_block: BEGIN_KEYWORD . stmt_ends_op stmt_list END

    SEMICOLON_SYMBOL  shift, and go to state 39
    NEW_LINE_SYMBOL   shift, and go to state 40

    $default  reduce using rule 61 (stmt_ends_op)

    stmt_ends     go to state 41
    stmt_ends_op  go to state 42


State 2

  113 class_declaration: CLASS . CLASS_NAME stmt_ends def_method_list_op END stmt_ends
  114                  | CLASS . CLASS_NAME LESS_OP new_lines_op CLASS_NAME stmt_ends def_method_list_op END stmt_ends

    CLASS_NAME  shift, and go to state 43


State 3

  105 def_method_stmt: DEF . VAR_OR_METHOD_NAME stmt_ends stmt_list_with_super END stmt_ends_op
  106                | DEF . VAR_OR_METHOD_NAME OPEN_ROUND_BRACKET new_lines_op method_params_list CLOSE_ROUND_BRACKET stmt_ends_op stmt_list_with_super END stmt_ends_op

    VAR_OR_METHOD_NAME  shift, and go to state 44


State 4

   38 expr: DEFINED . new_lines_op expr

    NEW_LINE_SYMBOL  shift, and go to state 45

    $default  reduce using rule 57 (new_lines_op)

    new_lines_op  go to state 46
    new_lines     go to state 47


State 5

   79 if_start_stmt: IF . new_lines_op expr stmt_ends stmt_list
   80              | IF . new_lines_op expr SEMICOLON_SYMBOL new_lines_op THEN stmt_ends_op stmt_list
   81              | IF . new_lines_op expr new_lines_op THEN stmt_ends_op stmt_list

    NEW_LINE_SYMBOL  shift, and go to state 45

    $default  reduce using rule 57 (new_lines_op)

    new_lines_op  go to state 48
    new_lines     go to state 47


State 6

   13 expr: FALSE .

    $default  reduce using rule 13 (expr)


State 7

   91 for_stmt: FOR . new_lines_op VAR_OR_METHOD_NAME IN new_lines_op expr stmt_ends stmt_list END
   92         | FOR . new_lines_op INSTANCE_VAR_NAME IN new_lines_op expr stmt_ends stmt_list END
   93         | FOR . new_lines_op VAR_OR_METHOD_NAME IN new_lines_op expr DO stmt_ends_op stmt_list END
   94         | FOR . new_lines_op INSTANCE_VAR_NAME IN new_lines_op expr DO stmt_ends_op stmt_list END

    NEW_LINE_SYMBOL  shift, and go to state 45

    $default  reduce using rule 57 (new_lines_op)

    new_lines_op  go to state 49
    new_lines     go to state 47


State 8

   39 expr: NOT . new_lines_op expr

    NEW_LINE_SYMBOL  shift, and go to state 45

    $default  reduce using rule 57 (new_lines_op)

    new_lines_op  go to state 50
    new_lines     go to state 47


State 9

   69 stmt: RETURN . expr stmt_ends
   70     | RETURN . stmt_ends

    DEFINED              shift, and go to state 4
    FALSE                shift, and go to state 6
    NOT                  shift, and go to state 8
    SELF                 shift, and go to state 10
    TRUE                 shift, and go to state 11
    ARITHMETIC_PLUS_OP   shift, and go to state 14
    ARITHMETIC_MINUS_OP  shift, and go to state 15
    LOGICAL_NOT_OP       shift, and go to state 16
    OPEN_ROUND_BRACKET   shift, and go to state 17
    OPEN_SQUARE_BRACKET  shift, and go to state 18
    SEMICOLON_SYMBOL     shift, and go to state 39
    NEW_LINE_SYMBOL      shift, and go to state 40
    STR                  shift, and go to state 19
    INTEGER_NUMBER       shift, and go to state 20
    FLOAT_NUMBER         shift, and go to state 21
    VAR_OR_METHOD_NAME   shift, and go to state 22
    INSTANCE_VAR_NAME    shift, and go to state 23
    CLASS_NAME           shift, and go to state 24

    expr       go to state 51
    stmt_ends  go to state 52


State 10

   51 expr: SELF . DOT_SYMBOL new_lines_op VAR_OR_METHOD_NAME
   52     | SELF . DOT_SYMBOL new_lines_op VAR_OR_METHOD_NAME OPEN_ROUND_BRACKET expr_list CLOSE_ROUND_BRACKET

    DOT_SYMBOL  shift, and go to state 53


State 11

   12 expr: TRUE .

    $default  reduce using rule 12 (expr)


State 12

   97 until_stmt: UNTIL . new_lines_op expr stmt_ends stmt_list END
   98           | UNTIL . new_lines_op expr DO stmt_ends_op stmt_list END

    NEW_LINE_SYMBOL  shift, and go to state 45

    $default  reduce using rule 57 (new_lines_op)

    new_lines_op  go to state 54
    new_lines     go to state 47


State 13

   95 while_stmt: WHILE . new_lines_op expr stmt_ends stmt_list END
   96           | WHILE . new_lines_op expr DO stmt_ends_op stmt_list END

    NEW_LINE_SYMBOL  shift, and go to state 45

    $default  reduce using rule 57 (new_lines_op)

    new_lines_op  go to state 55
    new_lines     go to state 47


State 14

   15 expr: ARITHMETIC_PLUS_OP . new_lines_op expr

    NEW_LINE_SYMBOL  shift, and go to state 45

    $default  reduce using rule 57 (new_lines_op)

    new_lines_op  go to state 56
    new_lines     go to state 47


State 15

   17 expr: ARITHMETIC_MINUS_OP . new_lines_op expr

    NEW_LINE_SYMBOL  shift, and go to state 45

    $default  reduce using rule 57 (new_lines_op)

    new_lines_op  go to state 57
    new_lines     go to state 47


State 16

   14 expr: LOGICAL_NOT_OP . new_lines_op expr

    NEW_LINE_SYMBOL  shift, and go to state 45

    $default  reduce using rule 57 (new_lines_op)

    new_lines_op  go to state 58
    new_lines     go to state 47


State 17

   42 expr: OPEN_ROUND_BRACKET . new_lines_op expr_list CLOSE_ROUND_BRACKET

    NEW_LINE_SYMBOL  shift, and go to state 45

    $default  reduce using rule 57 (new_lines_op)

    new_lines_op  go to state 59
    new_lines     go to state 47


State 18

   44 expr: OPEN_SQUARE_BRACKET . new_lines_op expr_list CLOSE_SQUARE_BRACKET

    NEW_LINE_SYMBOL  shift, and go to state 45

    $default  reduce using rule 57 (new_lines_op)

    new_lines_op  go to state 60
    new_lines     go to state 47


State 19

   11 expr: STR .

    $default  reduce using rule 11 (expr)


State 20

    9 expr: INTEGER_NUMBER .

    $default  reduce using rule 9 (expr)


State 21

   10 expr: FLOAT_NUMBER .

    $default  reduce using rule 10 (expr)


State 22

   45 expr: VAR_OR_METHOD_NAME . OPEN_ROUND_BRACKET new_lines_op expr_list CLOSE_ROUND_BRACKET
   46     | VAR_OR_METHOD_NAME .

    OPEN_ROUND_BRACKET  shift, and go to state 61

    $default  reduce using rule 46 (expr)


State 23

   47 expr: INSTANCE_VAR_NAME .

    $default  reduce using rule 47 (expr)


State 24

   48 expr: CLASS_NAME .

    $default  reduce using rule 48 (expr)


State 25

    0 $accept: program . $end

    $end  shift, and go to state 62


State 26

    5 program_items_list_not_empty: program_item .

    $default  reduce using rule 5 (program_items_list_not_empty)


State 27

    6 program_items_list_not_empty: program_items_list_not_empty . program_item
    8 program_items_list: program_items_list_not_empty .

    BEGIN_KEYWORD        shift, and go to state 1
    CLASS                shift, and go to state 2
    DEF                  shift, and go to state 3
    DEFINED              shift, and go to state 4
    IF                   shift, and go to state 5
    FALSE                shift, and go to state 6
    FOR                  shift, and go to state 7
    NOT                  shift, and go to state 8
    RETURN               shift, and go to state 9
    SELF                 shift, and go to state 10
    TRUE                 shift, and go to state 11
    UNTIL                shift, and go to state 12
    WHILE                shift, and go to state 13
    ARITHMETIC_PLUS_OP   shift, and go to state 14
    ARITHMETIC_MINUS_OP  shift, and go to state 15
    LOGICAL_NOT_OP       shift, and go to state 16
    OPEN_ROUND_BRACKET   shift, and go to state 17
    OPEN_SQUARE_BRACKET  shift, and go to state 18
    STR                  shift, and go to state 19
    INTEGER_NUMBER       shift, and go to state 20
    FLOAT_NUMBER         shift, and go to state 21
    VAR_OR_METHOD_NAME   shift, and go to state 22
    INSTANCE_VAR_NAME    shift, and go to state 23
    CLASS_NAME           shift, and go to state 24

    $default  reduce using rule 8 (program_items_list)

    program_item       go to state 63
    expr               go to state 29
    stmt               go to state 30
    stmt_block         go to state 31
    if_start_stmt      go to state 32
    if_stmt            go to state 33
    for_stmt           go to state 34
    while_stmt         go to state 35
    until_stmt         go to state 36
    def_method_stmt    go to state 37
    class_declaration  go to state 38


State 28

    1 program: program_items_list .

    $default  reduce using rule 1 (program)


State 29

   16 expr: expr . ARITHMETIC_POW_OP new_lines_op expr
   18     | expr . ARITHMETIC_MUL_OP new_lines_op expr
   19     | expr . ARITHMETIC_DIV_OP new_lines_op expr
   20     | expr . ARITHMETIC_MOD_OP new_lines_op expr
   21     | expr . ARITHMETIC_PLUS_OP new_lines_op expr
   22     | expr . ARITHMETIC_MINUS_OP new_lines_op expr
   23     | expr . GREATER_OP new_lines_op expr
   24     | expr . LESS_OP new_lines_op expr
   25     | expr . GREATER_OR_EQL_OP new_lines_op expr
   26     | expr . LESS_OR_EQL_OP new_lines_op expr
   27     | expr . COMB_COMPRASION_OP new_lines_op expr
   28     | expr . EQL_OP new_lines_op expr
   29     | expr . CASE_EQL_OP new_lines_op expr
   30     | expr . NOT_EQL_OP new_lines_op expr
   31     | expr . LOGICAL_AND_OP new_lines_op expr
   32     | expr . LOGICAL_OR_OP new_lines_op expr
   33     | expr . INCLUSIVE_RANGE_OP new_lines_op expr
   34     | expr . EXCLUSIVE_RANGE_OP new_lines_op expr
   35     | expr . ASSIGN_OP new_lines_op expr
   36     | expr . UNTIL new_lines_op expr
   37     | expr . WHILE new_lines_op expr
   40     | expr . AND new_lines_op expr
   41     | expr . OR new_lines_op expr
   43     | expr . OPEN_SQUARE_BRACKET new_lines_op expr CLOSE_SQUARE_BRACKET
   49     | expr . DOT_SYMBOL new_lines_op VAR_OR_METHOD_NAME
   50     | expr . DOT_SYMBOL new_lines_op VAR_OR_METHOD_NAME OPEN_ROUND_BRACKET expr_list CLOSE_ROUND_BRACKET
   63 stmt: expr . stmt_ends

    AND                  shift, and go to state 64
    OR                   shift, and go to state 65
    UNTIL                shift, and go to state 66
    WHILE                shift, and go to state 67
    ARITHMETIC_PLUS_OP   shift, and go to state 68
    ARITHMETIC_MINUS_OP  shift, and go to state 69
    ARITHMETIC_MUL_OP    shift, and go to state 70
    ARITHMETIC_DIV_OP    shift, and go to state 71
    ARITHMETIC_MOD_OP    shift, and go to state 72
    ARITHMETIC_POW_OP    shift, and go to state 73
    EQL_OP               shift, and go to state 74
    NOT_EQL_OP           shift, and go to state 75
    GREATER_OP           shift, and go to state 76
    LESS_OP              shift, and go to state 77
    GREATER_OR_EQL_OP    shift, and go to state 78
    LESS_OR_EQL_OP       shift, and go to state 79
    COMB_COMPRASION_OP   shift, and go to state 80
    CASE_EQL_OP          shift, and go to state 81
    ASSIGN_OP            shift, and go to state 82
    LOGICAL_AND_OP       shift, and go to state 83
    LOGICAL_OR_OP        shift, and go to state 84
    INCLUSIVE_RANGE_OP   shift, and go to state 85
    EXCLUSIVE_RANGE_OP   shift, and go to state 86
    OPEN_SQUARE_BRACKET  shift, and go to state 87
    DOT_SYMBOL           shift, and go to state 88
    SEMICOLON_SYMBOL     shift, and go to state 39
    NEW_LINE_SYMBOL      shift, and go to state 40

    stmt_ends  go to state 89


State 30

    2 program_item: stmt .

    $default  reduce using rule 2 (program_item)


State 31

   64 stmt: stmt_block . stmt_ends_op

    SEMICOLON_SYMBOL  shift, and go to state 39
    NEW_LINE_SYMBOL   shift, and go to state 40

    $default  reduce using rule 61 (stmt_ends_op)

    stmt_ends     go to state 41
    stmt_ends_op  go to state 90


State 32

   87 if_stmt: if_start_stmt . END
   88        | if_start_stmt . ELSE stmt_ends_op stmt_list END
   89        | if_start_stmt . elsif_stmt_list END
   90        | if_start_stmt . elsif_stmt_list ELSE stmt_ends_op stmt_list END

    ELSE   shift, and go to state 91
    ELSIF  shift, and go to state 92
    END    shift, and go to state 93

    elsif_stmt       go to state 94
    elsif_stmt_list  go to state 95


State 33

   65 stmt: if_stmt . stmt_ends_op

    SEMICOLON_SYMBOL  shift, and go to state 39
    NEW_LINE_SYMBOL   shift, and go to state 40

    $default  reduce using rule 61 (stmt_ends_op)

    stmt_ends     go to state 41
    stmt_ends_op  go to state 96


State 34

   66 stmt: for_stmt . stmt_ends_op

    SEMICOLON_SYMBOL  shift, and go to state 39
    NEW_LINE_SYMBOL   shift, and go to state 40

    $default  reduce using rule 61 (stmt_ends_op)

    stmt_ends     go to state 41
    stmt_ends_op  go to state 97


State 35

   67 stmt: while_stmt . stmt_ends_op

    SEMICOLON_SYMBOL  shift, and go to state 39
    NEW_LINE_SYMBOL   shift, and go to state 40

    $default  reduce using rule 61 (stmt_ends_op)

    stmt_ends     go to state 41
    stmt_ends_op  go to state 98


State 36

   68 stmt: until_stmt . stmt_ends_op

    SEMICOLON_SYMBOL  shift, and go to state 39
    NEW_LINE_SYMBOL   shift, and go to state 40

    $default  reduce using rule 61 (stmt_ends_op)

    stmt_ends     go to state 41
    stmt_ends_op  go to state 99


State 37

    3 program_item: def_method_stmt .

    $default  reduce using rule 3 (program_item)


State 38

    4 program_item: class_declaration .

    $default  reduce using rule 4 (program_item)


State 39

   53 stmt_ends: SEMICOLON_SYMBOL .
   55          | SEMICOLON_SYMBOL . stmt_ends

    SEMICOLON_SYMBOL  shift, and go to state 39
    NEW_LINE_SYMBOL   shift, and go to state 40

    $default  reduce using rule 53 (stmt_ends)

    stmt_ends  go to state 100


State 40

   54 stmt_ends: NEW_LINE_SYMBOL .
   56          | NEW_LINE_SYMBOL . stmt_ends

    SEMICOLON_SYMBOL  shift, and go to state 39
    NEW_LINE_SYMBOL   shift, and go to state 40

    $default  reduce using rule 54 (stmt_ends)

    stmt_ends  go to state 101


State 41

   62 stmt_ends_op: stmt_ends .

    $default  reduce using rule 62 (stmt_ends_op)


State 42

   78 stmt_block: BEGIN_KEYWORD stmt_ends_op . stmt_list END

    BEGIN_KEYWORD        shift, and go to state 1
    DEFINED              shift, and go to state 4
    IF                   shift, and go to state 5
    FALSE                shift, and go to state 6
    FOR                  shift, and go to state 7
    NOT                  shift, and go to state 8
    RETURN               shift, and go to state 9
    SELF                 shift, and go to state 10
    TRUE                 shift, and go to state 11
    UNTIL                shift, and go to state 12
    WHILE                shift, and go to state 13
    ARITHMETIC_PLUS_OP   shift, and go to state 14
    ARITHMETIC_MINUS_OP  shift, and go to state 15
    LOGICAL_NOT_OP       shift, and go to state 16
    OPEN_ROUND_BRACKET   shift, and go to state 17
    OPEN_SQUARE_BRACKET  shift, and go to state 18
    STR                  shift, and go to state 19
    INTEGER_NUMBER       shift, and go to state 20
    FLOAT_NUMBER         shift, and go to state 21
    VAR_OR_METHOD_NAME   shift, and go to state 22
    INSTANCE_VAR_NAME    shift, and go to state 23
    CLASS_NAME           shift, and go to state 24

    $default  reduce using rule 76 (stmt_list)

    expr                 go to state 29
    stmt                 go to state 102
    stmt_list_not_empty  go to state 103
    stmt_list            go to state 104
    stmt_block           go to state 31
    if_start_stmt        go to state 32
    if_stmt              go to state 33
    for_stmt             go to state 34
    while_stmt           go to state 35
    until_stmt           go to state 36


State 43

  113 class_declaration: CLASS CLASS_NAME . stmt_ends def_method_list_op END stmt_ends
  114                  | CLASS CLASS_NAME . LESS_OP new_lines_op CLASS_NAME stmt_ends def_method_list_op END stmt_ends

    LESS_OP           shift, and go to state 105
    SEMICOLON_SYMBOL  shift, and go to state 39
    NEW_LINE_SYMBOL   shift, and go to state 40

    stmt_ends  go to state 106


State 44

  105 def_method_stmt: DEF VAR_OR_METHOD_NAME . stmt_ends stmt_list_with_super END stmt_ends_op
  106                | DEF VAR_OR_METHOD_NAME . OPEN_ROUND_BRACKET new_lines_op method_params_list CLOSE_ROUND_BRACKET stmt_ends_op stmt_list_with_super END stmt_ends_op

    OPEN_ROUND_BRACKET  shift, and go to state 107
    SEMICOLON_SYMBOL    shift, and go to state 39
    NEW_LINE_SYMBOL     shift, and go to state 40

    stmt_ends  go to state 108


State 45

   59 new_lines: NEW_LINE_SYMBOL .
   60          | NEW_LINE_SYMBOL . new_lines

    NEW_LINE_SYMBOL  shift, and go to state 45

    $default  reduce using rule 59 (new_lines)

    new_lines  go to state 109


State 46

   38 expr: DEFINED new_lines_op . expr
